--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="top-containers-text">
       <h2>Hi! Ich bin Badr.</h2>
     </div>
-    <img src="..\CSS - My site\images\cloud.png" alt="cloud" class="cloud-one">
-    <img src="..\CSS - My site\images\cloud.png" alt="cloud" class="cloud-two">
-    <img src="..\CSS - My site\images\badr.png" alt="Badr Image" class="badr-image">
+    <img src="images\cloud.png" alt="cloud" class="cloud-one">
+    <img src="images\cloud.png" alt="cloud" class="cloud-two">
+    <img src="images\badr.png" alt="Badr Image" class="badr-image">
   </div>
 
   <div class="about-me">
@@ -97,14 +97,14 @@
       </div>
 
       <div onclick="location.href='http://www.google.com'" class="project-image">
-        <img src="..\CSS - My site\images\Image-Slider.png" alt="FAQ Project">
+        <img src="images\Image-Slider.png" alt="FAQ Project">
         <div class="overlay">
           <h4>Image Slider</h4>
         </div>
       </div>
 
       <div onclick="location.href='http://www.google.com'" class="project-image">
-        <img src="..\CSS - My site\images\Todo-App.png" alt="FAQ Project">
+        <img src="images\Todo-App.png" alt="FAQ Project">
         <div class="overlay">
           <h4>Todo App</h4>
         </div>
