--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
       </div>
 
       <div onclick="location.href='http://www.google.com'" class="project-image">
-        <img src="images\Image-Slider.png" alt="FAQ Project">
+        <img src="images\Image-Slider.png" alt="Image slider">
         <div class="overlay">
           <h4>Image Slider</h4>
         </div>
       </div>
 
       <div onclick="location.href='http://www.google.com'" class="project-image">
-        <img src="images\Todo-App.png" alt="FAQ Project">
+        <img src="images\Todo-App.png" alt="Todo App">
         <div class="overlay">
           <h4>Todo App</h4>
         </div>
