--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div onclick="location.href='http://www.google.com'" class="project-image">
         <img src="images\faq.jpg" alt="FAQ Project">
         <div class="overlay">
-          <h4>FAQ Project</h4>
+          <h4>FAQ</h4>
         </div>
       </div>
 
