--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="project-boxes">
 
-      <div onclick="location.href='http://www.google.com'" class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/faq-accordion-card/'" class="project-image">
         <img src="images\faq.jpg" alt="FAQ Project">
         <div class="overlay">
           <h4>FAQ</h4>
