--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
 
 
-      <div onclick="location.href='http://www.google.com'"  class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/price-grid/'"  class="project-image">
         <img src="images\price-grid.jpg" alt="Price Grid">
         <div class="overlay">
           <h4>Price Grid</h4>
