--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 
-      <div onclick="location.href='http://www.google.com'"  class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/testimonial-slider/'"  class="project-image">
         <img src="images\testimonial.jpg" alt="Testimonial">
         <div class="overlay">
           <h4>Testimonial Slider</h4>
