--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </div>
 
-      <div onclick="location.href='http://www.google.com'" class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/images-slider/'" class="project-image">
         <img src="images\Image-Slider.png" alt="Image slider">
         <div class="overlay">
           <h4>Image Slider</h4>
