--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div onclick="location.href='http://www.google.com'" class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/todo-app/'" class="project-image">
         <img src="images\Todo-App.png" alt="Todo App">
         <div class="overlay">
           <h4>Todo App</h4>
