--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Badr Nyali</title>
+  <title>Badr Nyali's Webseite</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 <body>
   <div class="top-containers">
     <div class="top-containers-text">
-      <h2>Hi! Ich bin Badr.</h2>
+      <h2>Hallo! Ich bin Badr.</h2>
     </div>
     <img src="images\cloud.png" alt="cloud" class="cloud-one">
     <img src="images\cloud.png" alt="cloud" class="cloud-two">
@@ -19,12 +19,21 @@
   </div>
 
   <div class="about-me">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</p>
+    <p>Herzlich Willkommen auf meiner Personal Webseite! Hier erhalten Sie einen Überblick
+      über meine Skills. Ich bin auf der Suche nach einem Praktikumplatz im Bereich Frontend für eine Dauer
+      von 3 bis 6 monaten. Derzeit studiere ich an der Friedrich-Alexander-Universität Erlangen-Nürnberg im Bachelorstudiengang
+      Wirtschaftswissenschaften mit schwerpunkt Wirtschaftsinformatik.
+
+    </p>
+
+    <!-- scroll down -->
+    <a href="#skills" class="scroll-down">
+      <img src="images\down-arrow.svg" alt="scroll Down">
+    </a>
   </div>
 
 
-  <div class="skills">
+  <div class="skills" id="skills">
 
     <div class="container">
 
@@ -63,6 +72,25 @@
           <span data-progress="30%"></span>
         </div>
       </div>
+
+      <div class="skill-box">
+        <div class="skill-name">
+          CMS
+        </div>
+        <div class="skill-progress">
+          <span data-progress="70%"></span>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <div class="skill-name">
+          SEO
+        </div>
+        <div class="skill-progress">
+          <span data-progress="40%"></span>
+        </div>
+      </div>
+
     </div>
   </div>
 
@@ -80,7 +108,7 @@
       </div>
 
 
-      <div onclick="location.href='https://badrnyali.github.io/price-grid/'"  class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/price-grid/'" class="project-image">
         <img src="images\price-grid.jpg" alt="Price Grid">
         <div class="overlay">
           <h4>Price Grid</h4>
@@ -89,7 +117,7 @@
 
 
 
-      <div onclick="location.href='https://badrnyali.github.io/testimonial-slider/'"  class="project-image">
+      <div onclick="location.href='https://badrnyali.github.io/testimonial-slider/'" class="project-image">
         <img src="images\testimonial.jpg" alt="Testimonial">
         <div class="overlay">
           <h4>Testimonial Slider</h4>
