--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="about-me">
-    <p>Herzlich Willkommen auf meiner Personal Webseite! Hier erhalten Sie einen Überblick
+    <p>Herzlich Willkommen auf meiner Personal Webseite! Hier erhalten Sie einen Übersicht
       über meine Skills. Ich bin auf der Suche nach einem Praktikumplatz im Bereich Frontend für eine Dauer
       von 3 bis 6 monaten. Derzeit studiere ich an der Friedrich-Alexander-Universität Erlangen-Nürnberg im Bachelorstudiengang
       Wirtschaftswissenschaften mit schwerpunkt Wirtschaftsinformatik.
