--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       Wirtschaftswissenschaften mit schwerpunkt Wirtschaftsinformatik.
 
     </p>
-
+<!-- scroll down -->
+    <a href="#skills" class="scroll-down">
+      <img src="images\down-arrow.svg" alt="scroll Down">
+    </a>
 
   </div>
 
