--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
       Wirtschaftswissenschaften mit schwerpunkt Wirtschaftsinformatik.
 
     </p>
-<!-- scroll down -->
+<!-- scroll down 
     <a href="#skills" class="scroll-down">
       <img src="images\down-arrow.svg" alt="scroll Down">
     </a>
+-->
 
   </div>
 
