--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           <span data-progress="70%"></span>
         </div>
       </div>
+      
+        <div class="skill-box">
+        <div class="skill-name">
+          Bootstrap
+        </div>
+        <div class="skill-progress">
+          <span data-progress="50%"></span>
+        </div>
+      </div>
 
       <div class="skill-box">
         <div class="skill-name">
@@ -73,14 +82,6 @@
         </div>
       </div>
 
-      <div class="skill-box">
-        <div class="skill-name">
-          CMS
-        </div>
-        <div class="skill-progress">
-          <span data-progress="70%"></span>
-        </div>
-      </div>
 
       <div class="skill-box">
         <div class="skill-name">
