--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
         </div>
       </div>
       
+      <div onclick="location.href='https://badrnyali.github.io/mealfinder/'" class="project-image">
+        <img src="images\mealfinder.png" alt="Meal finder">
+        <div class="overlay">
+          <h4>Meal Finder</h4>
+        </div>
+      </div>
+      
       <div onclick="location.href='https://badrnyali.github.io/faq-accordion-card/'" class="project-image">
         <img src="images\faq.jpg" alt="FAQ Project">
         <div class="overlay">
