--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
       </div>
       
        <div onclick="location.href='https://badrnyali.github.io/jobs_listing-/'" class="project-image">
-        <img src="images\job_listing.png" alt="Job listing">
+        <img src="images\job_listing.jpg" alt="Job listing">
         <div class="overlay">
           <h4>Job listing</h4>
         </div>
       </div>
       
        <div onclick="location.href='https://badrnyali.github.io/interactive_comments/'" class="project-image">
-        <img src="images\interactive_comments.png" alt="Interactive Comments">
+        <img src="images\interactive_comments.jpg" alt="Interactive Comments">
         <div class="overlay">
           <h4>Interactive Comments</h4>
         </div>
