--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="skill-box">
         <div class="skill-name">
-          Jquery
+          Sass
         </div>
         <div class="skill-progress">
           <span data-progress="30%"></span>
@@ -100,6 +100,12 @@
     <h2>My projects</h2>
 
     <div class="project-boxes">
+      <div onclick="location.href='https://badrnyali.github.io/simpson/'" class="project-image">
+        <img src="images\simpson.jpg" alt="Simpson">
+        <div class="overlay">
+          <h4>Simpson</h4>
+        </div>
+      </div>
       
        <div onclick="location.href='https://badrnyali.github.io/mealfinder/'" class="project-image">
         <img src="images\mealfinder.png" alt="Meal finder">
