--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <div class="project-boxes">
       <div onclick="location.href='https://badrnyali.github.io/simpson/'" class="project-image">
-        <img src="images\simpson.jpg" alt="Simpson">
+        <img src="images\simpson.png" alt="Simpson">
         <div class="overlay">
           <h4>Simpson</h4>
         </div>
