--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
         </div>
       </div>
       
+      <div class="project-boxes">
+      <div onclick="location.href='https://badrnyali.github.io/countries/'" class="project-image">
+        <img src="images\countries.jpg" alt="Countries">
+        <div class="overlay">
+          <h4>Countries</h4>
+        </div>
+      </div>
        <div onclick="location.href='https://badrnyali.github.io/mealfinder/'" class="project-image">
         <img src="images\mealfinder.png" alt="Meal finder">
         <div class="overlay">
