--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
       
       <div class="project-boxes">
         <div onclick="location.href='https://badrnyali.github.io/simpson/'" class="project-image">
-        <img src="images\simpson.png" alt="Simpson">
+        <img src="images\Simpson.png" alt="Simpson">
         <div class="overlay">
           <h4>Simpson</h4>
         </div>
         </div>
       <div onclick="location.href='https://badrnyali.github.io/countries/'" class="project-image">
-        <img src="images\countries.jpg" alt="Countries">
+        <img src="images\Countries.jpg" alt="Countries">
         <div class="overlay">
           <h4>Countries</h4>
         </div>
